gitops/apps/keycloak/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: keycloak
  labels:
    istio-injection: enabled
    ingress.apex-sync.io/public-gateway-access: "true"
